# Vespa

./: Cargo.toml  README.md  test.json
src/: main.rs
src/cli/: args.rs  command_dispatcher.rs  commands.rs  mod.rs
src/cli/commands/: command_utils.rs  disable_enable_command.rs  install_command.rs  install_local_command.rs  list_command.rs  mod.rs  profile_command.rs  run_command.rs  show_command.rs  uninstall_command.rs  update_command.rs
src/cli/presenter/: events.rs  mod.rs  presenter.rs
src/cli/presenter/events/: event.rs  install_event.rs  mod.rs  profile_manager_event.rs  uninstall_event.rs
src/downloading/: sk_package_downloader.rs
src/fetching/: mod.rs  sk_fetcher.rs  sk_package_fetcher.rs
src/handlers/: install_handler.rs  mod.rs  uninstall_handler.rs  update_handler.rs
src/installer/: mod.rs  sk_package_installer.rs  sk_package_tracker.rs
src/manager/: mod.rs  sk_dependency_handler.rs  sk_package_downloader.rs  sk_package_installer.rs  sk_package_manager.rs
src/manager/dependency_handler/: mod.rs  sk_dependency_handler.rs  sk_reverse_dependency_handler.rs
src/manager/downloader/: mod.rs  sk_package_downloader.rs
src/manager/installer/: mod.rs  sk_package_installer.rs
src/profile_manager/: mod.rs  sk_profile_manager.rs
src/tracker/: mod.rs  sk_package_tracker.rs
src/util/: config.rs  context.rs  file_handler.rs  mod.rs
