[package]
name = "Vespa"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "*", features = ["blocking", "json"]}
serde = {version ="*", features = ["derive"]} 
tempfile = "*"
thiserror = "*"
dirs = "*"
toml = "*"
serde_json = "*"
zip = "*"
semver = {version = "*", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
indicatif = "0.18.4"
fuzzy-matcher = "0.3.7"
