[package]
name = "Vespa"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "*", features = ["blocking", "json"]}
serde = {version ="*", features = ["derive"]} 
tempfile = "*"
thiserror = "*"
dirs = "*"
toml = "*"
serde_json = "*"
zip = "*"
semver = {version = "*", features = ["serde"] }
clap = { version = "*", features = ["derive"] }
dialoguer = "*"
indicatif = "*"
fuzzy-matcher = "*"
